1998-12-01  Jeff Garzik  <jgarzik@pobox.com>

	* autogen.sh:
	Platform fixes.  grep -q is not portable, do not use.

1998-12-01  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* autogen.sh: Run gettextize if needed.
	: Run libtoolize only if configure.in has "^AM_PROG_LIBTOOL".

1998-11-30  Jeff Garzik  <jgarzik@pobox.com>

	* gnome.m4: Re-arranged tests such that "--without-gnome" is
	fully supported.  Not only is the logic now correct, programs
	can test "want_gnome=yes/no" for the results of this arg.

1998-11-27  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: All parts of GNOME will now require
	LibGTop >= 0.29.0 which is the latest version from CVS.

1998-11-20  James Henstridge  <james@daa.com.au>

	* gnome.m4(GNOME_INIT_HOOK): Changed the call to GNOME_GNORBA_CHECK
	to GNOME_GNORBA_HOOK([],$2).  Before if you specified that the
	macro should not exit on errors, and you didn't have ORBit, the
	script would fail anyway.

1998-11-17  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: We need to check for <net/if_var.h>
	and conditionally include it before <net/if_isppp.h> in the code
	that check for I4B to make it work on FreeBSD 3.0.
	
1998-10-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* gnome-guile-checks.m4: Add GUILE_LIBS to LIBS when checking
	whether guile works.  Adding them to LDFLAGS does not work on all
	systems.  (Thanks to Rusty Chris Holleman)

1998-11-12  Andrew T. Veliath  <andrewtv@usa.net>

	* gnome-orbit-check.m4: Remove AC_DEFINE(HAVE_ORBIT). Add
	AM_CONDITIONAL for HAVE_ORBIT.  gnome-gnorba-check.m4: Same with
	HAVE_GNORBA.  Change GNOME_ORBIT_HOOK and GNOME_GNORBA_HOOK to use
	AC_CACHE_CHECK, setting both gnome_cv_orbit_found and
	gnome_cv_gnorba_found.

	* gnome.m4: (GNOME_INIT_HOOK): Add GNOME_GNORBA_CHECK if
	gnome-config is found.  New GNOMEGNORBA_LIBS library variable
	(GNOMEGNORBA_LIBS is a superset of GNOMEUI_LIBS).  Update
	GNOME_LIBDIR and GNOME_INCLUDEDIR to to include the required