@@ -1,3 +1,7 @@
+1998-12-02  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* autogen.sh: "Improve" indentation and messages somewhat.
+
 1998-12-01  Jeff Garzik  <jgarzik@pobox.com>
 
 	* autogen.sh:
